[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.1"
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.204"
serde_bencode = "0.2.4"
serde_bytes = "0.11"
serde_derive = "1.0"
sha1 = "0.10.6"
tokio = { version = "1.39.1", features = ["full"] }
url = "2.5.2"
urlencoding = "2.1.3"


[dev-dependencies]
serde_derive = "1.0"
serde_test = "1.0"
